# modd

./: .gitattributes  README.md
api/: CMakeLists.txt
api/demo/: CMakeLists.txt
api/demo/conf/: pub_broker.properties  sub_broker.properties  subscribers.conf  topics.conf
api/demo/helpers/: CustomTicker.cpp  CustomTicker.h  PlotWindow.cpp  PlotWindow.h  QSubscriberDataHandler.cpp  QSubscriberDataHandler.h
api/demo/main/: main_client_advanced.cpp  main_pub_broker.cpp  main_publisher_computer.cpp  main_sub_broker.cpp
api/docs/html/: _aggregation_type_8h_source.html  _buffer_8h_source.html  _buffer_optimizer_8h_source.html  _delivered_measure_8h_source.html  _double_buffer_8h_source.html  _id_8h_source.html  _measure_8h_source.html  _message_8h_source.html  _message_type_8h_source.html  _payload_8h_source.html  _peer_tcp_server_8h_source.html  _pub_broker_8h_source.html  _published_measure_8h_source.html  _publisher_core_8h_source.html  _schedule_8h_source.html  _session_type_8h_source.html  _simple_buffer_8h_source.html  _sub_broker_8h_source.html  _subscriber_core_8h_source.html  _subscription_8h_source.html  _tcp_client_8h_source.html  _tcp_helper_8h_source.html  _tcp_ip_id_8h_source.html  _tcp_server_8h_source.html  _tcp_session_8h_source.html  _topic_8h_source.html  _topic_configuration_8h_source.html  _topic_pub_broker_8h_source.html  _topic_sub_broker_8h_source.html  _util_8h.html  _util_8h.js  _util_8h__dep__incl.map  _util_8h__dep__incl.md5  _util_8h__incl.map  _util_8h__incl.md5  _util_8h_source.html  annotated.html  annotated_dup.js  class_buffer-members.html  class_buffer.html  (+234 more)
api/docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  related_0.js  related_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  (+3 more)
api/include/: AggregationType.h  Broker.h  Buffer.h  BufferOptimizer.h  DeliveredMeasure.h  DoubleBuffer.h  Id.h  Measure.h  Message.h  MessageType.h  Payload.h  PeerTcpServer.h  PubBroker.h  PublishedMeasure.h  PublisherCore.h  Schedule.h  SessionType.h  SimpleBuffer.h  SubBroker.h  SubscriberCore.h  Subscription.h  TcpClient.h  TcpHelper.h  TcpIpId.h  TcpServer.h  TcpSession.h  Topic.h  TopicConfiguration.h  TopicProxy.h  TopicPubBroker.h  TopicSubBroker.h  Util.h
api/main/: main_broker.cpp  main_proxy.cpp
api/src/: Broker.cpp  BufferOptimizer.cpp  DeliveredMeasure.cpp  Id.cpp  Message.cpp  MessageType.cpp  Payload.cpp  PeerTcpServer.cpp  Proxy.cpp  PubBroker.cpp  PublishedMeasure.cpp  PublisherCore.cpp  Schedule.cpp  SubBroker.cpp  SubscriberCore.cpp  Subscription.cpp  TcpClient.cpp  TcpIpId.cpp  TcpServer.cpp  TcpSession.cpp  Topic.cpp  TopicBroker.cpp  TopicConfiguration.cpp  TopicProxy.cpp  TopicPubBroker.cpp  TopicSubBroker.cpp  Util.cpp
include/: Buffer.h  Id.h  Measure.h  Message.h  Proxy.h  PublisherCore.h  Schedule.h  SessionType.h  TcpSession.h  TopicBroker.h
modeling/fr.ubo.collector/: plugin.properties  plugin.xml
modeling/fr.ubo.collector.acceleo/src/fr/ubo/collector/acceleo/: Activator.java
modeling/fr.ubo.collector.acceleo/tasks/: generateFiles.xml  generateFilesTarget.xml
modeling/fr.ubo.collector.dsl.ui/: plugin.xml
modeling/fr.ubo.collector.dsl/src-gen/fr/ubo/collector/dsl/: AbstractDslRuntimeModule.java  DslStandaloneSetupGenerated.java
modeling/fr.ubo.collector.dsl/src/fr/ubo/collector/dsl/: Dsl.xtext  DslRuntimeModule.xtend  DslStandaloneSetup.xtend  GenerateDsl.mwe2
modeling/fr.ubo.collector.dsl/xtend-gen/fr/ubo/collector/dsl/: DslRuntimeModule.java  DslStandaloneSetup.java
modeling/fr.ubo.collector.edit/: plugin.properties  plugin.xml
modeling/fr.ubo.collector.edit/src-gen/fr/ubo/collector/provider/: AddressableElementItemProvider.java  CollectorEditPlugin.java  CollectorItemProviderAdapterFactory.java  DataCollectorItemProvider.java  DroneItemProvider.java  EndpointItemProvider.java  MeasuredVariableItemProvider.java  NamedElementItemProvider.java  PubBrokerItemProvider.java  PublisherItemProvider.java  SensorItemProvider.java  SubBrokerItemProvider.java  SubscriberItemProvider.java  TcpIpEndpointItemProvider.java
modeling/fr.ubo.collector.editor/: plugin.properties  plugin.xml
modeling/fr.ubo.collector.instances/: instance_1.collector
modeling/fr.ubo.collector/model/: collector.aird  collector.ecore  collector.genmodel
modeling/fr.ubo.collector/src-gen/fr/ubo/collector/: AddressableElement.java  Aggregation.java  CollectorFactory.java  CollectorPackage.java  DataCollector.java  Drone.java  Endpoint.java  MeasuredVariable.java  MeasurementDataUnit.java  NamedElement.java  PubBroker.java  Publisher.java  Sensor.java  SubBroker.java  Subscriber.java  TcpIpEndpoint.java
ros_packages/interfaces/: CMakeLists.txt  package.xml
ros_packages/interfaces/msg/: Measure.msg
ros_packages/ros_modd_adapter/: CMakeLists.txt  package.xml
ros_packages/ros_modd_adapter/conf/: pub_broker_node.yaml  sub_broker_node.yaml  subscribers.conf  topics.conf
ros_packages/ros_modd_adapter/demo/: demo_publisher.cpp  demo_subscriber.cpp
ros_packages/ros_modd_adapter/include/ros_modd_adapter/: Constants.h  Helper.h  PubBrokerAdapter.h  SubBrokerAdapter.h
ros_packages/ros_modd_adapter/main/: pub_broker_node.cpp  sub_broker_node.cpp
ros_packages/ros_modd_adapter/src/: Constants.cpp  Helper.cpp  PubBrokerAdapter.cpp  SubBrokerAdapter.cpp
src/: Broker.cpp  DeliveredMeasure.cpp  Id.cpp  Message.cpp  MessageType.cpp  Payload.cpp  PeerTcpServer.cpp  Proxy.cpp  PublishedMeasure.cpp  PublisherCore.cpp  Schedule.cpp  SubscriberCore.cpp  Subscription.cpp  TcpClient.cpp  TcpIpId.cpp  TcpIpId.h  TcpServer.cpp  TcpSession.cpp  Topic.cpp  TopicBroker.cpp  TopicConfiguration.cpp  TopicProxy.cpp  Util.cpp
(+75 files in other folders)
